<resources>
	<string name="app_name">CryptoMarket</string>
	<string name="main">Main</string>
	<string name="favourites">Favourites</string>
	<string name="alerts">Alerts</string>
	<string name="open_drawer">Open Drawer</string>
	<string name="close_drawer">Close Drawer</string>
	<string name="powered_by">Powered by:</string>
	<string name="api_addr">www.cryptocompare.com</string>
	<string name="loading">Loading!!</string>
	<string name="price_title">Price </string>
	<string name="day_pct">24h % Change</string>
	<string name="euro_abv">EUR</string>
	<string name="gbp_abv">GBP</string>
	<string name="btc_abv">BTC</string>
	<string name="pln_abv">PLN</string>
	<string name="usd_abv">USD</string>
	<string name="pct_format">%s%%</string>
	<string name="simple_price_frmt">%s %s</string>
	<string name="search_cryptos">Search cryptos</string>
	<string name="twelve_hours_abv">12H</string>
	<string name="one_month">1M</string>
	<string name="twofour_hours_abv">24H</string>
	<string name="six_months">6M</string>
	<string name="one_year">1Y</string>
	<string name="network_error">Network error, please check connection!</string>
	<string name="data_loading_error">Error loading data!</string>
	<string name="links_title">Links</string>
	<string name="market_info_title">Market Info</string>
	<string name="description_title">Description</string>
	<string name="symbol_title">Symbol</string>
	<string name="marketcap_title">Market cap</string>
	<string name="market_title">Market</string>
	<string name="supply_title">Supply</string>
	<string name="vol24_title">Volume 24H</string>
	<string name="vol24_total_title">Total Volume 24H</string>
	<string name="high_day_title">High day</string>
	<string name="low_day_title">Low day</string>
	<string name="twitter_title">Twitter</string>
	<string name="blog_title">Blog</string>
	<string name="website_title">Website</string>
	<string name="whitepaper_title">White paper</string>
	<string name="not_available">N/A</string>
	<string name="no_network">Network no available!</string>


	<!--currency symbols-->
	<string name="EUR">€</string>
	<string name="USD">$</string>
	<string name="GBP">£</string>
	<string name="no_data_available">No data available</string>
	<string name="news">News</string>
	<string name="delete_title">Delete Favourite?</string>
	<string name="delete_content">Are you sure you want to delete from favourites?</string>
	<string name="agree">OK</string>
	<string name="cancel">Cancel</string>
	<string name="delete_failed">delete favourite failed!</string>
</resources>
