<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@drawable/ic_menu_dark">

	<group android:checkableBehavior="single"
		android:id="@+id/menuGroup"
		android:enabled="true"
		android:visible="true">

		<item
			android:id="@+id/usd_item"
			android:checked="true"
			app:actionViewClass="android.widget.RadioButton"
			android:title="@string/usd_abv" />
		<item
			android:id="@+id/euro_item"
			app:actionViewClass="android.widget.RadioButton"
			android:title="@string/euro_abv" />
		<item
			android:id="@+id/gbp_item"
			app:actionViewClass="android.widget.RadioButton"
			android:title="@string/gbp_abv" />
		<item
			android:id="@+id/btc_item"
			app:actionViewClass="android.widget.RadioButton"
			android:title="@string/btc_abv" />
		<item
			android:id="@+id/pln_item"
			app:actionViewClass="android.widget.RadioButton"
			android:title="@string/pln_abv" />

	</group>

</menu>