<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".UI.views.detail.DetailsActivity">


	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?android:attr/actionBarSize"
		android:background="@color/colorPrimaryDark"
		android:theme="@style/ActionBarStyle">

	</android.support.v7.widget.Toolbar>


	<ScrollView
		android:id="@+id/scrollview"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">


		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="fill_parent">

			<LinearLayout
				android:id="@+id/llayoutDetails"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<com.github.mikephil.charting.charts.LineChart
					android:id="@+id/line_graph"
					android:layout_width="match_parent"
					android:layout_height="280dp"
					android:layout_marginBottom="30dp"
					android:layout_marginTop="20dp" />


				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:weightSum="5">


					<Button
						android:id="@+id/twelveHourBtn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/twelve_hours_abv"
						tools:text="@string/twelve_hours_abv" />

					<Button
						android:id="@+id/twoFourHourBtn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/twofour_hours_abv"
						tools:tetx="@string/twofour_hours_abv" />

					<Button
						android:id="@+id/oneMonthBtn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/one_month"
						tools:text="@string/one_month" />

					<Button
						android:id="@+id/sixMonthsBtn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/six_months"
						tools:text="@string/six_months" />

					<Button
						android:id="@+id/oneYearBtn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/one_year"
						tools:text="@string/one_year" />


				</LinearLayout>


			</LinearLayout>


			<cryptomarket.eoinahern.ie.cryptomarket.UI.util.LoadingView
				android:id="@+id/loading_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center">


			</cryptomarket.eoinahern.ie.cryptomarket.UI.util.LoadingView>


		</FrameLayout>


	</ScrollView>

</LinearLayout>