<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/drawer"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimaryDark"
	android:fillViewport="true"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clickable="true"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@+id/top_view"
			android:layout_width="match_parent"
			android:layout_height="104dp">



		</RelativeLayout>

		<LinearLayout
			android:id="@+id/drawer_main"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="12dp"
				android:text="@string/main"
				android:textColor="@color/colorAccent"
				android:textSize="18dp" />


		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:background="@color/light_grey" />


		<LinearLayout
			android:id="@+id/drawer_alerts"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="12dp"
				android:text="@string/favourites"
				android:textColor="@color/light_grey"
				android:textSize="18dp" />


		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:background="@color/light_grey" />


		<LinearLayout
			android:id="@+id/drawer_all_crypto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="12dp"
				android:text="@string/alerts"
				android:textColor="@color/colorAccent"
				android:textSize="18dp" />


		</LinearLayout>

		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
			android:background="@color/light_grey" />



	</LinearLayout>


</ScrollView>